package OpenSolid;

message SerializedInt {
    required int32 value = 1;
}
